// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="req-conf-content-wrapper"
>
  <div
    className="title-wrapper"
  >
    <span
      className="second-level-title"
    >
      
    </span>
    <i
      aria-label="icon: plus-circle"
      className="anticon anticon-plus-circle icon-add"
      onClick={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="plus-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </i>
  </div>
  <table
    className="sources-table"
  >
    <thead>
      <tr>
        <th>
          参数
        </th>
        <th>
          取值
        </th>
        <th>
          自定义值
        </th>
        <th />
        <th />
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        className="sources-table-line"
      >
        <td
          className="sources-table-grid-key"
        >
          <input
            className="ant-input"
            disabled={false}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
        </td>
        <td
          className="sources-table-grid-type"
        >
          <div
            className="line config-param-input-wrapper"
          >
            <div
              className="config-param-select ant-select ant-select-enabled"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseUp={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-autocomplete="list"
                aria-controls="test-uuid"
                aria-expanded={false}
                aria-haspopup="true"
                className="ant-select-selection
            ant-select-selection--single"
                onKeyDown={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="ant-select-selection__rendered"
                >
                  <div
                    className="ant-select-selection-selected-value"
                    style={
                      Object {
                        "display": "block",
                        "opacity": 1,
                      }
                    }
                    title=""
                  >
                    
                  </div>
                </div>
                <span
                  className="ant-select-arrow"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <i
                    aria-label="icon: down"
                    className="anticon anticon-down ant-select-arrow-icon"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </i>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          className="sources-table-grid-value"
        >
          <input
            className="ant-input ant-input-disabled"
            disabled={true}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
        </td>
        <td>
          <i
            aria-label="icon: delete"
            className="anticon anticon-delete icon-remove"
            onClick={[Function]}
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="delete"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </i>
        </td>
        <td
          className="sources-table-grid-error"
        />
        <td
          className="sources-table-grid-error"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="req-conf-content-wrapper"
>
  <div
    className="title-wrapper"
  >
    <span
      className="second-level-title"
    >
      Header
    </span>
    <i
      aria-label="icon: plus-circle"
      className="anticon anticon-plus-circle icon-add"
      onClick={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="plus-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </i>
  </div>
  <table
    className="sources-table"
  >
    <thead>
      <tr>
        <th>
          参数
        </th>
        <th>
          取值
        </th>
        <th>
          自定义值
        </th>
        <th />
        <th />
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        className="sources-table-line"
      >
        <td
          className="sources-table-grid-key"
        >
          <input
            className="ant-input"
            disabled={false}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="x-from-cdn"
          />
        </td>
        <td
          className="sources-table-grid-type"
        >
          <div
            className="line config-param-input-wrapper"
          >
            <div
              className="config-param-select ant-select ant-select-enabled"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseUp={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-autocomplete="list"
                aria-controls="test-uuid"
                aria-expanded={false}
                aria-haspopup="true"
                className="ant-select-selection
            ant-select-selection--single"
                onKeyDown={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="ant-select-selection__rendered"
                >
                  <div
                    className="ant-select-selection-selected-value"
                    style={
                      Object {
                        "display": "block",
                        "opacity": 1,
                      }
                    }
                    title="请求资源的 IP"
                  >
                    请求资源的 IP
                  </div>
                </div>
                <span
                  className="ant-select-arrow"
                  onClick={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <i
                    aria-label="icon: down"
                    className="anticon anticon-down ant-select-arrow-icon"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </i>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          className="sources-table-grid-value"
        >
          <input
            className="ant-input ant-input-disabled"
            disabled={true}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="qiniu"
          />
        </td>
        <td>
          <i
            aria-label="icon: delete"
            className="anticon anticon-delete icon-remove"
            onClick={[Function]}
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="delete"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </i>
        </td>
        <td
          className="sources-table-grid-error"
        />
        <td
          className="sources-table-grid-error"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
